--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ env_logger = "0.11.2"
 getopt = "1.1.0"
 webbrowser = "0.8.10"
 light_phylogeny = "2.2.4"
+clap = { version = "4.5.4", features = ["derive"] }
